--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GuziyV — Résumé</title>
-  <link rel="me" href="https://google.com/profiles/thenextweb" type="text/html">
-	<link rel="me" href="mailto:name@example.com">
-	<link rel="me" href="sms:+15035550125">
+     <link rel="me" href="https://facebook.com/profiles/thenextweb" type="text/html">
+	   <link rel="me" href="mailto:name@example.com">
+	   <link rel="me" href="sms:+15035550125">
   </head>
   <body>
   
