Add "Hello world!"

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
       <link rel="me" href="https://rambler.com/profiles/thenextweb" type="text/html">
     </head>
   <body>
-  
+      Hello world!
   </body>
 </html>
