--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" 
+    integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <title>GuziyV — Résumé</title>                                                        
-      <link rel="me" href="https://facebook.com/profiles/thenextweb" type="text/html">
-      <link rel="me" href="mailto:name@example.com">                                                                                                                           
-      <link rel="me" href="sms:+380980041540">
-      <link rel="me" href="https://rambler.com/profiles/thenextweb" type="text/html">
-    </head>
+  </head> 
   <body>
-    Hello world!
+    <div class=«row»>
+      <div class=«col-md-6»> col-md-6 </div>
+      <div class=«col-md-6»> col-md-6 </div>
+    </div>
   </body>
 </html>
