--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" 
     integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" type="text/css"/>
     <title>GuziyV — Résumé</title>                                                        
   </head> 
   <body>
-    
+    <div class = "pt-3">
+      <div class = "col-md-2">
+        <div class = "text-center">
+         <div class = "h3">Resume</div>
+        </div>
+      </div>
+    </div>
+    <div id = "underscope" ></div>
   </body>
 </html>
