--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
     <title>GuziyV — Résumé</title>                                                        
   </head> 
   <body>
-    <div class = "pt-3">
-      <div class = "col-md-2">
-        <div class = "text-center">
-         <div class = "h3">Resume</div>
+    <div class = "container">
+      <div class = "pt-3">
+        <div class = "row">
+          <div class = "col-md-4">
+            <div class = "text-center">
+              <div class = "h3">Volodymyr Guziy</div>
+            </div>
+          </div>
         </div>
       </div>
+      <div id = "underscope" ></div>
+      <div class = "row">
+        <div class = "col-md-12">
+          <div id = "intro">
+            I am 18 years old ambitious student of Lviv National University. 
+            Like listening to good music and playing it, learn new technologies and improving myself in 
+            a different way. Want to improve my knowledge in programming and become a good specialist
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
-    <div id = "underscope" ></div>
+    
   </body>
 </html>
