Add timeline and fix some mistakes in headline

--- a/index.html
+++ b/index.html
@@ -12,23 +12,112 @@
     <div class = "container">
       <div class = "pt-3">
         <div class = "row">
-          <div class = "col-md-4">
-            <div class = "text-center">
-              <div class = "h3">Volodymyr Guziy</div>
+          <div class = "col-md-6">
+            <div class = "mr-2">
+              <div class = "h3" id = "headline">Volodymyr Guziy</div>
             </div>
           </div>
         </div>
       </div>
-      <div id = "underscope" ></div>
       <div class = "row">
         <div class = "col-md-12">
           <div id = "intro">
-            I am 18 years old ambitious student of Lviv National University. 
-            Like listening to good music and playing it, learn new technologies and improving myself in 
+            I am 19 years old ambitious student of Lviv National University. 
+            Like traelings, listening to good music and playing it, learn new technologies and improving myself in 
             a different way. Want to improve my knowledge in programming and become a good specialist
           </div>
         </div>
       </div>
+      <div class = "row">
+        <div class = "col-md-6">
+          <div>          
+            <strong>8th June 1999</strong>
+          </div>
+            <ul>
+              <li>
+                <i>I was born in Ternopil region</i>
+              </li>
+            </ul>
+          
+          <div>
+            <strong>2006</strong>
+          </div>
+          <ul>
+            <li>
+              <i>Learned to ride my first bike</i>
+            </li>
+          </ul>
+          <div>
+            <strong>spring 2008</strong>
+          </div>
+          <ul>
+            <li>
+              <i>lLearned to swim</i>
+            </li> 
+          </ul> 
+
+          <div>
+            <strong>Summer 2012</strong>
+          </div>
+          <ul>
+            <li>
+              <i> Won a gold medal in kickboxing region competition</i>
+            </li>
+          </ul> 
+
+          <div>
+            <strong>Summer 2013</strong>
+          </div>
+          <ul>
+            <li>
+              <i>Visited 'Artek' summer camp</i>
+            </li>
+          </ul>
+
+          <div>
+            <strong>Summer 2014</strong>
+          </div> 
+          <ul>
+            <li>
+              <i> Wrote my first computer program</i><br>
+            </li>
+            <li>
+              <i> Took first place in regional direction finding sport competition</i>
+            </li>
+          </ul>
+          
+
+          <div>
+            <strong>2016</strong>
+          </div>
+          <ul>
+              <li>
+                <i> Started learning Computer science in Lviv Nationl university Became </i><br>
+              </li>
+              <li>
+                <i> interested in music, especcialy in playing guitar</i>
+              </li>
+          </ul>
+
+          <div>
+            <strong>January 2018</strong>
+          </div>
+          <ul>
+            <li>
+              <i> Gave up drinking alcohol</i>
+            </li>
+          </ul>
+
+            <div>
+              <strong>Summer 2012</strong>
+            </div>
+              <ul>
+                <li>
+                  <i> Won a gold medal in kickboxing region competition</i>
+                </li>
+              </ul>
+        </div>
+      </dir>
 
 
 
