--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class = "col-md-10">
           <div id = "intro">
             I am 19 years old ambitious student of Lviv National University. 
-            Like traelings, listening to good music and playing it, learn new technologies and improving myself in 
+            Like travelings, listening to good music and playing it, learning new technologies and improving myself in 
             a different way. Want to improve my knowledge in programming and become a good specialist
           </div>
         </div>
         <img id = "myPhoto" class = "colo-md-2 " src="images/myPhoto.jpg" alt="image problem">
       </div>
       <div class = "row">
-        <div class = "col-md-6" id = "timeline">
+        <div class = "col-md-4" id = "timeline">
           <div>          
             <strong>8th June 1999</strong>
           </div>
@@ -49,7 +49,7 @@
           </div>
           <ul>
             <li>
-              <i>lLearned to swim</i>
+              <i>Learned to swim</i>
             </li> 
           </ul> 
 
@@ -89,10 +89,10 @@
           </div>
           <ul>
               <li>
-                <i> Started learning Computer science in Lviv Nationl university Became </i><br>
+                <i> Started learning Computer science in Lviv Nationl University</i><br>
               </li>
               <li>
-                <i> interested in music, especcialy in playing guitar</i>
+                <i> Became interested in music, especcialy in playing guitar</i>
               </li>
           </ul>
 
@@ -104,23 +104,39 @@
               <i> Gave up drinking alcohol</i>
             </li>
           </ul>
-
-          <div>
-            <strong>Summer 2012</strong>
-          </div>
-          <ul>
-            <li>
-              <i> Won a gold medal in kickboxing region competition</i>
-            </li>
-          </ul>
         </div>
 
+        <div class = "col-md-4">
+          <div id = "info">
+            <div>
+              <strong>About me</strong>
+            </div>
+            18 years old ambitious student ineterested in learning programming languages, sport, playing guitar and music in general.
+            <div>
+              <strong>Likes</strong>
+            </div>
+            <div>
+              Good music, animals, technologies, reading, fishing, swimming, kind and honest people,
+              minimalism, challenges, travelings, riding bicycle and many other things in my life :).
+            </div>
+            <div>
+              <strong>Dislikes</strong>
+            </div>
+            <div>Hate, cruelty, racism, evil</div>
+          </div>
 
+          <div>
+            <h5>Proffesional skills</h5>
+          </div>
+          <ul>
+            <li>Intermediate level of English</li>
+            <li>С++, C#(.NET), OOP, SQL, Design patterns</li>
+            <li>Basic knowledge of HTML, CSS, javascript, ASP.NET, PHP(MVC Fraemworks)</li>
+          </ul>
+        </div>
         
-      </dir>
-
-
-
-    
+        <div class = "col-md-4">
+          <h5>Contact</h5>
+        </div>
   </body>
 </html>
