--- a/index.html
+++ b/index.html
@@ -136,7 +136,22 @@
         </div>
         
         <div class = "col-md-4">
-          <h5>Contact</h5>
+          <h5>Contacts</h5>
+          <div>
+            <i>Facebook: </i><a href="Facebook: https://www.facebook.com/profile.php?id=100019527223708">Володимир Гузій</a>
+          </div>
+          <div>
+            <i>Mobile: </i><strong>+380980041540</strong>
+          </div>
+          <div>
+            <i>Telegram: </i><strong>@VGuziy</strong>
+          </div>
+          <div>
+            <i>Skype: </i> <strong>vovan2224</strong>
+          </div>
+          <div>
+            <i>E-mail: </i><strong>volodyaguziy3@gmail.com<strong>
+          </div>
         </div>
   </body>
 </html>
