Change about me section and fixing w3 mistakes

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
             </li>
           </ul>
           
-
           <div>
             <strong>2016</strong>
           </div>
@@ -111,7 +110,8 @@
             <div>
               <strong>About me</strong>
             </div>
-            18 years old ambitious student ineterested in learning programming languages, sport, playing guitar and music in general.
+              I am responsible, hardworking(if the job is interesting) and derived student ineterested in learning programming languages, 
+              sport, playing guitar and music in general.
             <div>
               <strong>Likes</strong>
             </div>
@@ -138,7 +138,7 @@
         <div class = "col-md-4">
           <h5>Contacts</h5>
           <div>
-            <i>Facebook: </i><a href="Facebook: https://www.facebook.com/profile.php?id=100019527223708">Володимир Гузій</a>
+            <i>Facebook: </i><a href="https://www.facebook.com/profile.php?id=100019527223708">Володимир Гузій</a>
           </div>
           <div>
             <i>Mobile: </i><strong>+380980041540</strong>
@@ -150,8 +150,10 @@
             <i>Skype: </i> <strong>vovan2224</strong>
           </div>
           <div>
-            <i>E-mail: </i><strong>volodyaguziy3@gmail.com<strong>
+            <i>E-mail: </i><strong>volodyaguziy3@gmail.com</strong>
           </div>
         </div>
+      </div>
+    </div>
   </body>
 </html>
