Fix grammar mistakes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class = "col-md-10">
           <div id = "intro">
             I am 19 years old ambitious student of Lviv National University. 
-            Like travelings, listening to good music and playing it, learning new technologies and improving myself in 
-            a different way. Want to improve my knowledge in programming and become a good specialist
+            I Like travelling, listening to good music and playing it, learning new technologies and improving myself in 
+            various ways.I want to improve my knowledge of programming and become a good specialist
           </div>
         </div>
         <img id = "myPhoto" class = "colo-md-2 " src="images/myPhoto.jpg" alt="image problem">
@@ -45,7 +45,7 @@
             </li>
           </ul>
           <div>
-            <strong>spring 2008</strong>
+            <strong>Spring 2008</strong>
           </div>
           <ul>
             <li>
@@ -58,7 +58,7 @@
           </div>
           <ul>
             <li>
-              <i> Won a gold medal in kickboxing region competition</i>
+              <i> Won a gold medal in regional kickboxing competition</i>
             </li>
           </ul> 
 
@@ -117,7 +117,7 @@
             </div>
             <div>
               Good music, animals, technologies, reading, fishing, swimming, kind and honest people,
-              minimalism, challenges, travelings, riding bicycle and many other things in my life :).
+              minimalism, challenges, traveling, riding bicycle and many other things in my life :).
             </div>
             <div>
               <strong>Dislikes</strong>
