Change contact section
Add funny icons

--- a/index.html
+++ b/index.html
@@ -138,18 +138,23 @@
         <div class = "col-md-4">
           <h5>Contacts</h5>
           <div>
-            <i>Facebook: </i><a href="https://www.facebook.com/profile.php?id=100019527223708">Володимир Гузій</a>
+              <img class = "icon" src="images/facebook_icon.png" alt="image problem">
+              <i>Facebook: </i><a href="https://www.facebook.com/profile.php?id=100019527223708">Володимир Гузій</a>
           </div>
           <div>
+            <img class = "icon" src="images/mobile_icon.png" alt="image problem">
             <i>Mobile: </i><strong>+380980041540</strong>
           </div>
           <div>
+            <img class = "icon" src="images/telegram_icon.png" alt="image problem">
             <i>Telegram: </i><strong>@VGuziy</strong>
           </div>
           <div>
+            <img class = "icon" src="images/Skype_icon.png" alt="image problem">
             <i>Skype: </i> <strong>vovan2224</strong>
           </div>
           <div>
+            <img class = "icon" src="images/gmail.png" alt="image problem">
             <i>E-mail: </i><strong>volodyaguziy3@gmail.com</strong>
           </div>
         </div>
